# support-ticket-triage

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.ui  README.md  app.py  config.yaml  docker-compose.yml  main.py  mlruns.db  pyproject.toml
notebooks/: eda.ipynb  mlruns.db  modeling.ipynb  preprocessing.ipynb
src/api/: main.py
src/data/: preprocessing.py
src/models/: train.py
